# simpleJava2C

./: CMakeLists.txt  Makefile  MyTest.java  readme.txt  testjni.cpp
